--- a/.github/workflows/refspec-test.yml
+++ b/.github/workflows/refspec-test.yml
@@ -11,10 +11,12 @@ on:
 jobs:
   refcpec-build:
     runs-on: ubuntu-latest
+    container: buddhasystem/lusee-night-refspec-foundation:0.1 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - run: ls ${{ github.workspace }}
       - run: which g++
+      - run: ls /fftw
 #      - run: make
       - run: echo 'end'
