--- a/.github/workflows/refspec-test.yml
+++ b/.github/workflows/refspec-test.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - run: ls ${{ github.workspace }}
+#      - run: ls ${{ github.workspace }}
       - run: which g++
       - run: ls /fftw
 #      - run: make
