--- a/.github/workflows/refspec-test.yml
+++ b/.github/workflows/refspec-test.yml
@@ -15,8 +15,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-#      - run: ls ${{ github.workspace }}
-      - run: which g++
-      - run: ls /fftw
+        # Check later why this doesn't work anymore: - run: ls ${{ github.workspace }}
+      - run: pwd
+      - run: ls -l
 #      - run: make
       - run: echo 'end'
