Adding a rudimentary regression test

--- a/.github/workflows/refspec-test.yml
+++ b/.github/workflows/refspec-test.yml
@@ -16,8 +16,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         # Check later why this doesn't work anymore: - run: ls ${{ github.workspace }}
-      - run: pwd
-      - run: ls -l
       - run: make
-      - run: ls -l test
+      - run: ./test/test_pfb.out > pfb_test1.dat
+      - run: diff pfb_test1.dat ./data/pfb_test1.dat
       - run: echo 'end'
