--- a/.github/workflows/refspec-test.yml
+++ b/.github/workflows/refspec-test.yml
@@ -19,6 +19,6 @@ jobs:
       - run: make
       - run: ./test/test_pfb.out > ./pfb_test1.dat
       - run: cat ./pfb_test1.dat
-      - run: diff ./pfb_test1.dat data/pfb_test1.dat
+      - run: python3 -c "import numpy as np; a=np.loadtxt('pfb_test1.dat')[:,1]; b=np.loadtxt('data/pfb_test1.dat')[:,1]; assert(np.all(np.abs(a-b)/(0.5*(a+b))<1e-4))"
       - run: echo 'end'
       
