Updated workflow... diff...

--- a/.github/workflows/refspec-test.yml
+++ b/.github/workflows/refspec-test.yml
@@ -15,10 +15,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        # -mxp-
         # Check later why this doesn't work anymore: - run: ls ${{ github.workspace }}
       - run: make
       - run: ./test/test_pfb.exe > ./pfb_test1.dat
-      - run: cat ./pfb_test1.dat
-#      - run: python3 -c "import numpy as np; a=np.loadtxt('pfb_test1.dat')[:,1]; b=np.loadtxt('data/pfb_test1.dat')[:,1]; assert(np.all(np.abs(a-b)/(0.5*(a+b))<1e-4))"
-      - run: echo 'end'
+      - run: diff ./pfb_test1.dat ./data/pfb_test1.dat
+
+      # -mxp-
+      # Will decide later how to compare best, now stick with literal equivalency
+      #      - run: python3 -c "import numpy as np; a=np.loadtxt('pfb_test1.dat')[:,1]; b=np.loadtxt('data/pfb_test1.dat')[:,1]; assert(np.all(np.abs(a-b)/(0.5*(a+b))<1e-4))"
+
       
