updated the workflow for CI to pull pb11

--- a/.github/workflows/refspec-test.yml
+++ b/.github/workflows/refspec-test.yml
@@ -16,6 +16,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         # -mxp- Check later why this doesn't work anymore: - run: ls ${{ github.workspace }}
+      # -mxp- pull pybind11
+      - run: git submodule update --init
       - run: make
       - run: ./test/test_pfb.exe > ./pfb_test.dat
 
