Adding back the Pythonic test

--- a/.github/workflows/refspec-test.yml
+++ b/.github/workflows/refspec-test.yml
@@ -23,12 +23,12 @@ jobs:
       - run: make
       - run: ls -l
       - run: pwd
-#      - run: ./test/test_pfb.exe > ./pfb_test.dat
+      - run: ./test/test_pfb.exe > ./pfb_test.dat
       - run: ls -l /usr/local/lib/*fft*
       - run: mkdir -p /usr/lib/x86_64-linux-gnu/
       - run: cp /usr/local/lib/*fft* /usr/lib/x86_64-linux-gnu/
-      - run: echo $LD_LIBRARY_PATH
       - run: python3.10 -c 'import refspec'
+      - run: ./scripts/test_pybind11.py
       - name: 'pfb_test Artifact'
         uses: actions/upload-artifact@v3
         with:
