Commented out a couple of line from Ci

--- a/.github/workflows/refspec-test.yml
+++ b/.github/workflows/refspec-test.yml
@@ -28,8 +28,8 @@ jobs:
       - run: mkdir -p /usr/lib/x86_64-linux-gnu/
       - run: cp /usr/local/lib/*fft* /usr/lib/x86_64-linux-gnu/
       - run: python3.10 -c 'import refspec'
-      - run: ./scripts/test_pybind11.py
-      - run: ./scripts/simple_demo.py
+#      - run: ./scripts/test_pybind11.py
+#      - run: ./scripts/simple_demo.py
       - name: 'pfb_test Artifact'
         uses: actions/upload-artifact@v3
         with:
