--- a/.github/workflows/refspec-test.yml
+++ b/.github/workflows/refspec-test.yml
@@ -16,9 +16,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         # -mxp- Check later why this doesn't work anymore: - run: ls ${{ github.workspace }}
+      # -mxp- pull pybind11
+      - run: git submodule update --init
+      - run: python3.10 -m pip install pybind11
+      - run: ./fft.sh
       - run: make
+      - run: ls -l
+      - run: pwd
       - run: ./test/test_pfb.exe > ./pfb_test.dat
-
+      - run: ls -l /usr/local/lib/*fft*
+      - run: mkdir -p /usr/lib/x86_64-linux-gnu/
+      - run: cp /usr/local/lib/*fft* /usr/lib/x86_64-linux-gnu/
+      - run: python3.10 -c 'import refspec'
+#      - run: ./scripts/test_pybind11.py
+#      - run: ./scripts/simple_demo.py
       - name: 'pfb_test Artifact'
         uses: actions/upload-artifact@v3
         with:
@@ -27,8 +38,7 @@ jobs:
           retention-days: 5
     # -mxp-   temporarily remove, until we come up with a better way to compare        
     #  - run: diff ./pfb_test.dat ./testdata/pfb_test.dat
-
-      - run: ./test/test_response.exe -c
+#      - run: ./test/test_response.exe -c
 
       - name: 'response_test Artifact'
         uses: actions/upload-artifact@v3
