--- a/docker/Dockerfile-foundation
+++ b/docker/Dockerfile-foundation
@@ -19,8 +19,7 @@ WORKDIR /fftw
 RUN g++ --version
 
 RUN wget http://www.fftw.org/fftw-3.3.10.tar.gz && tar xfvz fftw-3.3.10.tar.gz
-RUN cd fftw-3.3.10 && ./configure --enable-float && make && make install
-RUN cd fftw-3.3.10 && ./configure && make && make install
+RUN cd fftw-3.3.10 && ./configure --enable-float --enable-shared && make -j4 && make install
+RUN cd fftw-3.3.10 && ./configure --enable-shared && make -j4 && make install
 
 WORKDIR /user
-
