--- a/.github/workflows/refspec-test.yml
+++ b/.github/workflows/refspec-test.yml
@@ -29,7 +29,7 @@ jobs:
       #- run: cp /usr/local/lib/*fft* /usr/lib/x86_64-linux-gnu/
       # - run: python3.10 -c 'import refspec'
       # - run: ./scripts/pybind11_validator.py
-      - run: ./scripts/cppyy_demo.py
+      - run: export CPATH=./include && ./scripts/cppyy_demo.py
       #- name: 'pfb_test Artifact'
       #  uses: actions/upload-artifact@v3
       #  with:
