--- a/Makefile-shared
+++ b/Makefile-shared
@@ -7,6 +7,7 @@ BUILD = ./build
 FFTW_LINK = -lfftw3 -lfftw3f
 
 SRCS = pfb.cpp SpecConfig.cpp SpecOutput.cpp SignalGenerator.cpp RefSpectrometer.cpp PowerSpecSource.cpp CombSource.cpp
+HDRS = SpecConfig.h SpecOutput.h SignalGenerator.h RefSpectrometer.h PowerSpecSource.h CombSource.h
 OBJS := $(patsubst %.cpp, $(BUILD)/%.o, $(SRCS) )
 
 LIBRARY = refspec.so
@@ -25,6 +26,6 @@ LIBRARY: $(BUILD) $(OBJS) Makefile
 	g++ $(OBJS) -shared -lfftw3 -lfftw3f -o $(LIBRARY) 
 
 
-$(OBJS): $(BUILD)/%.o: src/%.cpp Makefile
+$(OBJS): $(BUILD)/%.o: src/%.cpp include/%.h Makefile
 	$(CXX) -c $(CXXFLAGS_DYNAMIC) -Iinclude -Iextern ${python_includes} $< -o $@
 
