Fixes in some C++ sources, the new test_powspec is close to final.

--- a/.github/workflows/refspec-test.yml
+++ b/.github/workflows/refspec-test.yml
@@ -30,7 +30,7 @@ jobs:
       #- run: cp /usr/local/lib/*fft* /usr/lib/x86_64-linux-gnu/
       # - run: python3.10 -c 'import refspec'
       # - run: ./scripts/pybind11_validator.py
-      - run: export CPATH=./include && export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH && ./scripts/cppyy_demo.py
+      - run: export CPATH=./include && export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH && ./cppyy/simple_demo.py
       #- name: 'pfb_test Artifact'
       #  uses: actions/upload-artifact@v3
       #  with:
