--- a/.github/workflows/refspec-test.yml
+++ b/.github/workflows/refspec-test.yml
@@ -2,35 +2,37 @@ name: refspec-test
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main, pybind11 ]
+    branches: [ main, ]
   pull_request:
-    branches: [ main, pybind11 ]
+    branches: [ main, ]
 
   # Enable manual activation, too
   workflow_dispatch:
 jobs:
   refcpec-build:
     runs-on: ubuntu-latest
-    container: buddhasystem/lusee-night-refspec-foundation:0.1 
+    container: lusee/lusee-night-refspec-cppyy:0.1 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        run: env
+        run: ls -l /user/include
       # Submodule activation here is to pull pybind11 - comment out for now
       # - run: git submodule update --init
       # - run: python3.10 -m pip install pybind11
-      - run: python3.10 -m pip install cppyy
-      - run: ls -l /usr/local/lib
-      - run: echo $LD_LIBRARY_PATH      
+      #- run: python3.10 -m pip install cppyy
+      #- run: ls -l /usr/local/lib
+      #- run: echo $LD_LIBRARY_PATH      
       # Build local binaries:
-      - run: make -j4 -f Makefile-shared
-      - run: pwd
-      - run: ls -l
+      #- run: make -j4 -f Makefile-shared
+      #- run: pwd
+      #- run: ls -l
       # - run: ./test/test_pfb.exe > ./pfb_test.dat
       #- run: mkdir -p /usr/lib/x86_64-linux-gnu/
       #- run: cp /usr/local/lib/*fft* /usr/lib/x86_64-linux-gnu/
       # - run: python3.10 -c 'import refspec'
       # - run: ./scripts/pybind11_validator.py
-      - run: export CPATH=./include && export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH && ./cppyy/simple_demo.py
+      # - run: export CPATH=./include && export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH && ./cppyy/simple_demo.py
       #- name: 'pfb_test Artifact'
       #  uses: actions/upload-artifact@v3
       #  with:
