--- a/Makefile-shared
+++ b/Makefile-shared
@@ -6,7 +6,7 @@ BUILD = ./build
 
 FFTW_LINK = -lfftw3 -lfftw3f
 
-SRCS = pfb.cpp SpecConfig.cpp SpecOutput.cpp SignalGenerator.cpp SignalCombiner.cpp RefSpectrometer.cpp PowerSpecSource.cpp CombSource.cpp
+SRCS = pfb.cpp SpecConfig.cpp SpecOutput.cpp SignalGenerator.cpp SignalCombiner.cpp RefSpectrometer.cpp PowerSpecSource.cpp CombSource.cpp FileStreamSink.cpp WhiteNoise.cpp FileStreamSource.cpp
 HDRS = SpecConfig.h SpecOutput.h SignalGenerator.h SignalCombiner.h RefSpectrometer.h PowerSpecSource.h CombSource.h
 OBJS := $(patsubst %.cpp, $(BUILD)/%.o, $(SRCS) )
 
