working correlated generator

--- a/Makefile-shared
+++ b/Makefile-shared
@@ -1,13 +1,16 @@
 CXX = g++
 
-CXXFLAGS_DYNAMIC = -O3 -fPIC -g -std=c++17
+CXXFLAGS_DYNAMIC = -O3 -fPIC -g -std=c++17 
+#-D_GLIBCXX_DEBUG
 
 BUILD = ./build
 
 FFTW_LINK = -lfftw3 -lfftw3f
 
-SRCS = pfb.cpp SpecConfig.cpp SpecOutput.cpp SignalGenerator.cpp SignalCombiner.cpp RefSpectrometer.cpp PowerSpecSource.cpp CombSource.cpp FileStreamSink.cpp WhiteNoise.cpp FileStreamSource.cpp
-HDRS = SpecConfig.h SpecOutput.h SignalGenerator.h SignalCombiner.h RefSpectrometer.h PowerSpecSource.h CombSource.h
+SRCS = pfb.cpp SpecConfig.cpp SpecOutput.cpp SignalGenerator.cpp SignalCombiner.cpp RefSpectrometer.cpp PowerSpecSource.cpp CombSource.cpp FileStreamSink.cpp WhiteNoise.cpp FileStreamSource.cpp CorrelatedSpecSource.cpp testing.cpp
+
+HDRS = SpecConfig.h SpecOutput.h SignalGenerator.h SignalCombiner.h RefSpectrometer.h PowerSpecSource.h CombSource.h CorrelatedSpecSource.h testing.h
+
 OBJS := $(patsubst %.cpp, $(BUILD)/%.o, $(SRCS) )
 
 LIBRARY = refspec.so
