--- a/.github/workflows/refspec-test.yml
+++ b/.github/workflows/refspec-test.yml
@@ -16,7 +16,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - run: env
-      - run: ls -l /user/include
+      - run: /user/refspec/scripts/simple_demo.py
+
       # Submodule activation here is to pull pybind11 - comment out for now
       # - run: git submodule update --init
       # - run: python3.10 -m pip install pybind11
