Update Dockerfile-foundation (comments)

--- a/docker/Dockerfile-foundation
+++ b/docker/Dockerfile-foundation
@@ -1,8 +1,9 @@
 #
 # Basic Dockerfile used to build a Debian image
-# in which to build refspec
+# with FFTW software included, on top of which one
+# can build refspec
 # 
-# This file is to be referenced when building the luseepy
+# This file is to be referenced when building
 # images from a folder one level above. Example:
 #
 # sudo docker build -f docker/Dockerfile-myfile -t MYTAGNAME .
